libdebian-installer (0.29+0.30.unreleased) UNRELEASED; urgency=low

  * Bastian Blank
    - Deprecate di_prebaseconfig_append and di_system_prebaseconfig_append.

 -- Bastian Blank <waldi@debian.org>  Tue, 29 Jun 2004 13:45:42 +0200

libdebian-installer (0.29) unstable; urgency=low

  * Joey Hess
    - Re-enable character device mapping. Though it often gets it wrong, the
      cases where it gets it right are used by prebaseconfig.

 -- Joey Hess <joeyh@debian.org>  Tue, 15 Jun 2004 12:41:12 -0400

libdebian-installer (0.28) unstable; urgency=low

  * Joey Hess
    - fix devfs.c test mode (to really work)
    - fix /dev/ida support off by one
    - fix /dev/ataraid support, leave off the cN part of device name
    - don't map character devices to block device namesb

 -- Joey Hess <joeyh@debian.org>  Mon, 14 Jun 2004 11:34:03 -0400

libdebian-installer (0.27) unstable; urgency=low

  * Bastian Blank
    - anna dependency resolver stops on already installed packages.
    - Make debugging output a little bit better to read.
    - Make anna dependency resolver permissive again.
    - Add an option to enable extensive debugging output.
    - Fix ABI. (closes: #250299, #253037)
  * Joshua Kwan
    - quote an argument in configure.ac to fix test complaining about no
      LHS for extensive-debug

 -- Bastian Blank <waldi@debian.org>  Mon, 14 Jun 2004 14:23:10 +0200

libdebian-installer (0.23) unstable; urgency=low

  * Bastian Blank
    - Bump revision to 3.
    - Add a special dependency resolver type for anna (checks Kernel-Version
      and Subarchitecture) (unstable interface).
    - Mark the old Kernel-Version resolver as deprecated.
    - Remove backward compatiblity from dependency resolver.
    - Remove two undocumented symbols.
    - Use debhelper udeb support.
    - Add environment support to execution helpers.
    - The size of a hash map is the number of elements, not the size of the
      array.