@@ -134,6 +134,11 @@ LIBDI_4.3_UNSTABLE {
     di_system_packages_resolve_dependencies_mark_anna;
 } LIBDI_4.2_UNSTABLE;
 
+LIBDI_4.4 {
+  global:
+    di_exec_path_full;
+} LIBDI_4.3;
+
 #LIBDI_PRIVATE {
 #  global:
 #    internal_*;
