@@ -2,8 +2,9 @@ libdebian-installer (0.29+0.30.unreleased) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Deprecate di_prebaseconfig_append and di_system_prebaseconfig_append.
+    - Add di_exec_path(_full) (execvp wrapper).
 
- -- Bastian Blank <waldi@debian.org>  Tue, 29 Jun 2004 13:45:42 +0200
+ -- Bastian Blank <waldi@debian.org>  Sat, 18 Sep 2004 11:44:17 +0200
 
 libdebian-installer (0.29) unstable; urgency=low
 
